k8s/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanderlust-backend
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanderlust-backend
  template:
    metadata:
      labels:
        app: wanderlust-backend
    spec:
      containers:
        - name: backend
          # image will be overridden via kustomize in overlays
          image: kiran90/backend-app:eb7e085
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "512Mi"
