k8s/deploy-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanderlust-database
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanderlust-database
  template:
    metadata:
      labels:
        app: wanderlust-database
    spec:
      containers:
  - name: database
    image: kiran90/database:eb7e085
    command: ["mongod", "--bind_ip_all", "--dbpath", "/data/db"]
    ports:
      - containerPort: 27017
    readinessProbe:
      tcpSocket:
        port: 27017
      initialDelaySeconds: 10
      periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 27017
      initialDelaySeconds: 30
      periodSeconds: 20
