k8s/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanderlust-frontend
  namespace: wanderlust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wanderlust-frontend
  template:
    metadata:
      labels:
        app: wanderlust-frontend
    spec:
      containers:
        - name: frontend
          # image will be overridden via kustomize in overlays
          image: kiran90/frontend-app:eb7e085
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
