k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wanderlust-frontend
  namespace: wanderlust
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wanderlust-frontend
  template:
    metadata:
      labels:
        app: wanderlust-frontend
    spec:
      containers:
        - name: frontend
          image: kiran90/frontend-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-frontend
  namespace: wanderlust
spec:
  selector:
    app: wanderlust-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer   # If using minikube, replace with NodePort
