k8s/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-backend
  namespace: wanderlust
spec:
  selector:
    app: wanderlust-backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
