k8s/svc-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-database
  namespace: wanderlust
spec:
  selector:
    app: wanderlust-database
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
