k8s/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-frontend
  namespace: wanderlust
spec:
  selector:
    app: wanderlust-frontend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
